--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "dependencies": {},
   "devDependencies": {
+    "axios": ">=0.21.2",
+    "vue": "^3.0.5",
     "autoprefixer": "^9.0.0",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
